fixed radio button visibility

--- a/src/App.css
+++ b/src/App.css
@@ -104,6 +104,10 @@ a {
   margin-bottom: -130px;
 }
 
+.emotion-radio {
+  display: none;
+}
+
 .smiley {
   background: linear-gradient(135deg, rgb(255, 233, 25) 0%, rgb(251, 192, 0) 100%);
   border-radius: 100%;
